--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==13.15
+python-telegram-bot[rate-limiter,job-queue]==21.1
 supabase==1.2.0
-APScheduler==3.6.3
 python-dotenv==1.0.1
