--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-python-telegram-bot[rate-limiter,job-queue]==21.1
-supabase==1.2.0
-python-dotenv==1.0.1
+python-telegram-bot==21.1
+supabase>=2.0.0
+python-dotenv
